kubernetes/apps/auth/authelia/app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth
  namespace: auth
spec:
  hostnames:
  - auth
  - auth.gallay.hu
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal
    namespace: kube-system
    sectionName: https
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
    namespace: kube-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: authelia-app
      namespace: auth
      port: 9091
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
